--- a/week3/dojo_survey2/views/index.ejs
+++ b/week3/dojo_survey2/views/index.ejs
@@ -10,8 +10,12 @@
             // this triggers the connection event in our server!
             var socket  = io.connect();
             // we'll write all the socket stuff after the above line!
-            $( 'button').click(function (){
-                socket.emit( "posting_form");
+            $( '#form').submit(function (){
+                console.log('submitting the form');
+                socket.emit( "posting_form", { name: $('#name').attribute('value'), location: $('#location').attribute('value'), language: $('#language').attribute('value'), comment: $('#comment').attribute('value')});
+
+
+                return false;
             });
             socket.on("updated_message", function(){
                 console.log("Got the form data!")
@@ -26,27 +30,27 @@
 <body>
     <h1>Dojo Survey</h1>
 
-    <div class="submitted_info" style="display: none">
-        <h3>You emitted the following information to the server: <%= response %></h3>
+    <div id="submitted_info" style="display: none">
+        <h3>You emitted the following information to the server: </h3>
     </div>
     <div>
-        <form action="/results" method="post" accept-charset="utf-8">
+        <form id="form" accept-charset="utf-8">
             <div><label for="">Your Name: </label>
-            <input type="text" name="name" value=""></div>
+            <input id="name" type="text" name="name" value=""></div>
             <div><label for="">Dojo Location: </label>
-            <select name="location">
+            <select id="location" name="location">
                 <option value="San Jose">San Jose</option>
                 <option value="Chicago">Chicago</option>
                 <option value="Seattle">Seattle</option>
             </select></div>
             <div><label for="">Favorite Language: </label>
-            <select name="language" >
+            <select id="language" name="language" >
                 <option value="Python">Python</option>
                 <option value="HTML">HTML</option>
                 <option value="Ruby">Ruby</option>
             </select></div>
             <div><label>Comment (optional):</label>
-            <textarea name="comment" rows="5", cols="35"></textarea></div>
+            <textarea id="comment" name="comment" rows="5", cols="35"></textarea></div>
             <button type="submit">Submit</button>
         </form>
     </div>
